--- a/MyTask4App/Base.lproj/Main.storyboard
+++ b/MyTask4App/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,106 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyTask4App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="あなたの運勢を占います" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BhE-22-FNC">
+                                <rect key="frame" x="0.0" y="44" width="414" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="                    年         月     日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CGT-zc-5nI">
+                                <rect key="frame" x="0.0" y="124" width="414" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="e8d-lc-4sk">
+                                <rect key="frame" x="0.0" y="160" width="414" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="586857606.90021598">
+                                    <!--2019-08-07 08:00:06 +0000-->
+                                </date>
+                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="血液型" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hWm-xd-AXq">
+                                <rect key="frame" x="0.0" y="376" width="414" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="DjU-6I-d49">
+                                <rect key="frame" x="0.0" y="412" width="414" height="29"/>
+                                <segments>
+                                    <segment title="A型"/>
+                                    <segment title="B型"/>
+                                    <segment title="O型"/>
+                                    <segment title="AB型"/>
+                                </segments>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="好きな数字を指定してください" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4oP-AV-cwL">
+                                <rect key="frame" x="0.0" y="440" width="414" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="XxH-i1-phh">
+                                <rect key="frame" x="28" y="470" width="358" height="31"/>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lbq-J7-reh">
+                                <rect key="frame" x="0.0" y="510" width="414" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="占う">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="a0O-J4-fWt">
+                                <rect key="frame" x="0.0" y="540" width="414" height="292"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="4oP-AV-cwL" firstAttribute="top" secondItem="DjU-6I-d49" secondAttribute="bottom" id="5Yw-sC-0Wj"/>
+                            <constraint firstItem="XxH-i1-phh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="9mx-vP-zqH"/>
+                            <constraint firstItem="DjU-6I-d49" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="CUW-aj-iIb"/>
+                            <constraint firstItem="BhE-22-FNC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Ihj-l4-HW8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XxH-i1-phh" secondAttribute="trailing" constant="30" id="KDz-Sg-rEQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DjU-6I-d49" secondAttribute="trailing" id="LOk-Va-28t"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lbq-J7-reh" secondAttribute="trailing" id="LpL-R5-0Fs"/>
+                            <constraint firstItem="lbq-J7-reh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="N4G-0e-eaX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a0O-J4-fWt" secondAttribute="trailing" id="Oyh-wt-ii7"/>
+                            <constraint firstItem="CGT-zc-5nI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="P0K-Yt-bc3"/>
+                            <constraint firstAttribute="trailing" secondItem="BhE-22-FNC" secondAttribute="trailing" id="T0r-mc-7di"/>
+                            <constraint firstItem="hWm-xd-AXq" firstAttribute="top" secondItem="e8d-lc-4sk" secondAttribute="bottom" id="T8r-el-G5d"/>
+                            <constraint firstItem="lbq-J7-reh" firstAttribute="top" secondItem="XxH-i1-phh" secondAttribute="bottom" constant="10" id="Tuw-Jh-iaM"/>
+                            <constraint firstItem="BhE-22-FNC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ZCv-jU-DuX"/>
+                            <constraint firstItem="e8d-lc-4sk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bIe-X7-WGH"/>
+                            <constraint firstItem="XxH-i1-phh" firstAttribute="top" secondItem="4oP-AV-cwL" secondAttribute="bottom" id="cs1-Kg-AFH"/>
+                            <constraint firstItem="a0O-J4-fWt" firstAttribute="top" secondItem="lbq-J7-reh" secondAttribute="bottom" id="gRL-NB-M87"/>
+                            <constraint firstItem="a0O-J4-fWt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="htl-xq-SDD"/>
+                            <constraint firstItem="CGT-zc-5nI" firstAttribute="top" secondItem="BhE-22-FNC" secondAttribute="bottom" constant="50" id="jNu-dx-0Ar"/>
+                            <constraint firstAttribute="trailing" secondItem="CGT-zc-5nI" secondAttribute="trailing" id="lVG-xa-R4s"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="a0O-J4-fWt" secondAttribute="bottom" constant="30" id="lys-nG-yAC"/>
+                            <constraint firstItem="e8d-lc-4sk" firstAttribute="top" secondItem="CGT-zc-5nI" secondAttribute="bottom" id="qrI-EC-Xsg"/>
+                            <constraint firstItem="hWm-xd-AXq" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="tGP-mp-A4w"/>
+                            <constraint firstAttribute="trailing" secondItem="4oP-AV-cwL" secondAttribute="trailing" id="tWY-Xh-mFO"/>
+                            <constraint firstItem="hWm-xd-AXq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uNR-Yv-1a9"/>
+                            <constraint firstItem="4oP-AV-cwL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vZq-TV-y1H"/>
+                            <constraint firstItem="DjU-6I-d49" firstAttribute="top" secondItem="hWm-xd-AXq" secondAttribute="bottom" id="xb2-sr-jc7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="e8d-lc-4sk" secondAttribute="trailing" id="xqj-Va-6wT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="112.5"/>
         </scene>
     </scenes>
 </document>
